[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.md

[flake8]
max-line-length = 88

[tool:pytest]
strict = true
testpaths = test

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true

known_first_party=flask_redis
